# sap

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.cargo/: config.toml
src/: app.rs  color.rs  config_file.rs  core.rs  display.rs  flags.rs  git.rs  git_theme.rs  main.rs  sort.rs  theme.rs
src/flags/: blocks.rs  color.rs  date.rs  dereference.rs  display.rs  header.rs  hyperlink.rs  icons.rs  ignore_globs.rs  indicators.rs  layout.rs  literal.rs  llm.rs  permission.rs  recursion.rs  size.rs  sorting.rs  symlinks.rs  truncate_owner.rs
src/icon/: icons.rs  mod.rs
src/llm/: mod.rs  ollama_agent.rs  shield.rs
src/meta/: access_control.rs  date.rs  filetype.rs  git_file_status.rs  indicator.rs  inode.rs  links.rs  locale.rs  mod.rs  name.rs  owner.rs  permissions.rs  permissions_or_attributes.rs  size.rs  symlink.rs  windows_attributes.rs  windows_utils.rs
src/presentation/: mod.rs
src/stream/: aggregated_chat_stream.rs  llm_stream.rs  mod.rs  tree_accumulator.rs
src/theme/: alpha.rs  color.rs  icon.rs  render.rs
tests/: integration_orphaned_test.rs
