[workspace]
resolver = "3"
exclude = ["tmp/*"]

[package]
authors = ["David Maple<david@cyrup.ai"]
build = "build.rs"
description = "`sap` is set of file system tools + MCP tools for LLM agentic coding"
keywords = ["ls", "llm", "tree", "ai", "fs"]
license = "MIT OR Apache-2.0"
name = "sap"
readme = "./README.md"
repository = "https://github.com/cyrup-ai/sap"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sap"
path = "src/main.rs"

[build-dependencies]
clap = { version = "4.5.39", features = ["derive"] }
clap_complete = "4.5.52"
version_check = "0.9.*"

[dependencies]
anyhow = "1.0"
num_cpus = "1.17"
rig-core = { git = "https://github.com/0xPlaygrounds/rig.git", branch = "main", features = ["all", "rmcp", "reqwest-rustls", "audio", "image", "worker"] }
rig-surrealdb = { git = "https://github.com/0xPlaygrounds/rig.git", branch = "main" }
getrandom = { version = "0.3", optional = true }
tokio-stream = "0.1"

tracing = "0.1"
crossterm = { version = "0.29.0", features = ["serde"] }
dirs = "6.0.0"
libc = "0.2.*"
human-sort = "0.2.2"
term_grid = "0.2.0"
terminal_size = "0.4.2"
thiserror = "2.0.12"
sys-locale = "0.3"
once_cell = "1.21.3"
chrono = { version = "0.4.41", features = ["unstable-locales"] }
chrono-humanize = "0.2"
console = "0.15"
unicode-width = "0.2.0"
lscolors = "0.20.0"
wild = "2.2.1"
globset = "0.4.*"
yyaml = { path = "../yyaml" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
url = "2.5.4"
vsort = "0.2"
xdg = "3.0.0"
jwalk = "0.8.1"
rayon = "1.10.0"
serde_json = "1.0.140"
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
schemars = "0.9.0"
rand = "0.9.1"
rig-derive = "0.1.2"

[target."cfg(not(all(windows, target_arch = \"x86\", target_env = \"gnu\")))".dependencies]
gix = { version = "0.72.1", default-features = false, features = ["status", "index", "dirwalk", "revision", "worktree-mutation", "blob-diff"] }

[target.'cfg(unix)'.dependencies]
users = { version = "0.11.0", package = "users" }
xattr = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_Security_Authorization", "Win32_Storage_FileSystem", "Win32_System_Memory"] }

[target."spirv-unknown-vulkan1.1".dependencies]
spirv-std = "0.9.0"

[dependencies.clap]
features = ["derive", "wrap_help"]
version = "4.5.39"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"
serial_test = "3.2.0"

[features]
default = []
sudo = []
